# miniClaw

./: .copyright.template.py  .copyright.template.ts  .env.example  .gitignore  API_KEY_SECURITY_GUIDELINES.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT_PLAN.md  Dockerfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_PART2.md  LICENSE  LLM_CONFIG_REFACTOR_PLAN.md  LLM_CONFIG_REFACTOR_PLAN_V2.md  NOTICE.md  OPTIMIZATION_QUICK_REFERENCE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_TEST_REPORT.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  README.md  SKILLS_FIX_SUMMARY.md  docker-compose.yml  start.bat  start.ps1  start.sh  sync_repos.py
backend/: .env.example  =0.8  MANIFEST.in  check_config.py  pyproject.toml  requirements.txt  test_performance_win.py
backend/app/: config.py  dependencies.py  logging_config.py  main.py
backend/app/api/: __init__.py  chat.py  config.py  dream.py  embedding.py  files.py  knowledge_base.py  media.py  memory.py  memory_sync.py  python_repl.py  sessions.py  settings.py  skills.py  websocket.py  wiki.py
backend/app/core/: __init__.py  agent.py  callback_handler.py  container.py  database.py  description_refiner.py  embedding_manager.py  error_aggregator.py  error_context.py  error_context_logger.py  exceptions.py  execution_cache.py  interfaces.py  llm.py  llm_config.py  llm_retry.py  log_level_switcher.py  logging_formatter.py  logging_sanitizer.py  obfuscation.py  performance_tracker.py  rag_engine.py  settings_registry.py  skills_registry.py  smart_stopping.py  streaming_debug_logger.py  tools.py  tracking_context.py  trusted_domains.py  upload_progress.py  websocket.py
backend/app/generators/: __init__.py  markdown_generator.py
backend/app/memory/: __init__.py  case_memory.py  database_memory.py  database_session.py  entity_profile.py  extractor.py  hybrid_retriever.py  long_term_updater.py  memory_manager.py  migration.py  models.py  procedural.py  profile_updater.py  prompts.py  retriever_factory.py  retriever_interface.py  session.py  truncation.py
backend/app/models/: __init__.py  chat.py  database.py  files.py  knowledge_base.py  memory.py  sessions.py
backend/app/repositories/: __init__.py  memory_repository.py
backend/app/skills/: __init__.py  bootstrap.py  dependencies.py  executor.py  loader.py
backend/app/tools/: __init__.py  fetch_url.py  python_repl.py  read_file.py  search_kb.py  terminal.py  write_file.py
backend/app/utils/: __init__.py  (+1 more)
backend/data/: pattern_nn.pth  patterns.json
backend/scripts/: __init__.py  migrate_to_database.py  validate_daily_work.py
backend/tests/: tot_skills_test.py
backend/workspace/: AGENTS.md  IDENTITY.md  MEMORY.md  SKILLS_SNAPSHOT.md  SOUL.md  USER.md
(+419 files in other folders)
